@@ -4,7 +4,9 @@
 - In s-c-audit, fix error handling with audit-1.7.12 and later
 - In s-c-audit, fix saving space_left_action
 - In s-c-audit, include many new translations
-- Correct ending keywords meanings for ausearch & aureport
+- Aureport and ausearch do not need to stat the dispatcher
+- Make auparse handle empty AUSOURCE_FILE_ARRAY correctly (Miloslav Trmač)
+- Allow ausearch/report to specify multiple node names (Lenny Bruzenak)
 
 1.7.13
 - Disable libev asserts unless --with-debug passed to configure
